Make stopwatch and character selector bounding boxes more visible

--- a/src/pages/Game/CharacterSelector.module.css
+++ b/src/pages/Game/CharacterSelector.module.css
@@ -8,7 +8,7 @@
     background-color: transparent;
     height: 40px;
     width: 40px;
-    border: 3px dashed red;
+    border: 5px dashed #00ff1e;
 }
 .characters {
     list-style: none;
