--- a/src/pages/Game/Stopwatch.module.css
+++ b/src/pages/Game/Stopwatch.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-color: rgba(102, 56, 63, 0.55);
+    background-color: rgba(102, 56, 63, 0.85);
     position: fixed;
     padding: 1rem 3rem;
     color: white;
